tests/suite/fail/generated/borrow/fail_move_take_input.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let input = "hello"
    take(input)
    print(input) //~ ERROR was moved
}
